deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-app-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: flask-app
  template:
    metadata:
      labels:
        app: flask-app
    spec:
      containers:
        - name: flask-app
          image: maria0803/library:latest
          ports:
            - containerPort: 5000
          volumeMounts:
            - mountPath: /data
              name: flask-app-storage
      volumes:
        - name: flask-app-storage
          persistentVolumeClaim:
            claimName: flask-app-pvc
